ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  #namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      name: pingpong
      
      labels:
        app: pingpong
    spec:
#      volumes:
#        - name: shared-volume
#          persistentVolumeClaim:
#            claimName: volume-claim
      containers:
        - name: pingpong
          image: misetius/pingpong:2.7
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 120
            httpGet:
              path: /pingpong
              port: 3006
#          volumeMounts:
#          - name: shared-volume
#            mountPath: /usr/src/app/pongs
