ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  #namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 3006
